buttons and spacing for header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="hero-text-box">
             <h1>CAN’T HURT ME: Master Your Mind and Defy the Odds</h1>
             <p>Can’t Hurt Me: Master Your Mind and Defy the Odds chronicles David Goggins’ incredible life from perpetual victim to active duty Navy SEAL to world class ultra athlete and world record holder. Now available at these fine retailers.</p>
-            <a href="">About Book</a>
-            <a href="">About David</a>
+            <a href="" class="btn btn-filled">About Book</a>
+            <a href="" class="btn btn-outline">About David</a>
         </div>
 
     </header>
