--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 <body>
     <header>
+        <nav>
+            <img src="resources/css/img/logo.png" class="logo" alt="">
+        
+                <ul class="navigation">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Book</a></li>
+                    <li><a href="">Speaking Information</a></li>
+                    <li><a href="">In The Media</a></li>
+                    <li><a href="">Athletic Achievement</a></li>
+                </ul>
+            
+        </nav>
+        </nav>
         <div class="hero-text-box">
             <h1>CAN’T HURT ME: Master Your Mind and Defy the Odds</h1>
             <p>Can’t Hurt Me: Master Your Mind and Defy the Odds chronicles David Goggins’ incredible life from perpetual victim to active duty Navy SEAL to world class ultra athlete and world record holder. Now available at these fine retailers.</p>
