--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
             <a href="" class="btn btn-filled">About Book</a>
             <a href="" class="btn btn-outline">About David</a>
         </div>
-
     </header>
+    <section class="signup">
+        <div class="col span-2-of-3">
+            <h2 class="freecopy"> Sign up for a free copy of the Introduction to Can’t Hurt Me</h2>
+        </div>
+        <div class="col span-1-of-3">
+            <input class="email" type="text">
+            <a href="" class="btn btn-sub">Subscribe</a>
+        </div>  
+    </section>
+
+    <section class="inspiration">
+        <div class="inspiration-text-box">
+            <h1>PURE<br/> INSPIRATION</h1>
+            <p>David brings his inspirational story to every engagement with his passionate and empowering presence. He electrifies audiences both large and small, from corporate engagements where he speaks to hundreds of executives or thousands of salespeople to intimate settings with a select group of VIP clients.</p>
+            <a href="" class="btn btn-filled">Speaking information</a>
+        </div>
+    </section>
+    
    
     
 </body>
