--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
             <a href="" class="btn btn-filled">Speaking information</a>
         </div>
     </section>
+
+    <section class="featured">
+        <h2 class="featured-on">As featured on:</h2>
+        <div class="featured-row">
+            <div class="col span-1-of-4">
+                <img src="resources/css/img/home_features_logo3 (1).jpg" class="logo" alt="">
+            </div>
+            <div class="col span-1-of-4">
+                <img src="resources/css/img/home_features_logo4-177x106 (1).jpg" class="logo" alt="">
+            </div>
+            <div class="col span-1-of-4">
+                <img src="resources/css/img/home_features_logo1-157x106.jpg" class="logo" alt="">
+            </div>
+            <div class="col span-1-of-4">
+                <img src="resources/css/img/CBS_MorningLogo-146x106 (1).jpg" class="logo" alt="">
+            </div>
+        </div>
+        <h3 class="featured-on">View all media</h3>
+    </section>
     
    
     
